--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,8 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  username: MyString
-  password_digest: MyString
-  auth_token: 
-
-two:
-  username: MyString
-  password_digest: MyString
-  auth_token: 
+<% 5.times do |i| %>
+user_<%= i %>:
+  username: <%= "User Nr#{i}" %>
+  password_digest: <%= BCrypt::Password.create('password123') %>
+  auth_token: <%= SecureRandom.base58(24) %>
+<% end %>
