--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,6 +3,7 @@
 <% 5.times do |i| %>
 user_<%= i %>:
   username: <%= "User Nr#{i}" %>
-  password_digest: <%= BCrypt::Password.create('password123') %>
+  password_digest: <%= BCrypt::Password.create('password') %>
   auth_token: <%= SecureRandom.base58(24) %>
+  updated_at: <%= i == 4 ? 1.hour.ago : Time.now %>
 <% end %>
